syntax = "proto2";
package sls_logs;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/alibaba/ilogtail/pkg/protocol";

message Log
{
  required uint32 Time = 1;// UNIX Time Format
  message Content
  {
    required string Key = 1;
    required string Value = 2;
  }
  repeated Content Contents = 2;
  repeated string values = 3;
  optional fixed32 Time_ns = 4 [(gogoproto.nullable) = true];
}
message LogTag
{
  required string Key = 1;
  required string Value = 2;
}
message LogGroup
{
  repeated Log Logs = 1;
  optional string Category = 2;
  optional string Topic = 3;
  optional string Source = 4;
  optional string MachineUUID = 5;
  repeated LogTag LogTags = 6;
}

message SlsLogPackage
{
  required bytes data = 1;  // the serialized data of LogGroup , may be compressed
  optional int32 uncompress_size = 2;
}

message SlsLogPackageList
{
  repeated SlsLogPackage packages = 1;
}

message LogGroupList
{
  repeated LogGroup logGroupList = 1;
}

